frontend/style.css
/* ... */
img#addInputImage:hover {
	transform: scale(1.1); /* 이미지를 10% 확대 */
}

div#defaultImgBox {
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

img#friendDefaultImg {
	width: 50%;
	height: 50%;
}

img#goBack{
	cursor: pointer;
	position:absolute;
	bottom: 30px;
	right: 30px;
	width: 80px;
	height: 80px;
	transition: transform 0.3s ease; /* 부드러운 전환 효과 */
}

img#goBack:hover {
	transform: scale(1.1); /* 이미지를 10% 확대 */
}


div#profileBox {
	position: relative;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

div#profile {
	background-color: rgba(90, 93, 106, 0.05);
	border-radius: 20px;
	width: 85%;
	height: 85%;
	display: flex;
}

div#profile-left {
	width: 40%;
	height: 100%;
	display: flex;
	flex-direction: column;
	align-items: flex-end;
}

div#profile-right {
	width: 60%;
	height: 100%;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
}

div#profileHeaderBox {
	margin-top: 50px;
	height: 10%;
	width: 80%;
	display: flex;
	justify-content: center;
	align-items: center;
}

#profileHeader {
	font-weight: 900;
	color:#31363F;
    font-size: 3.0rem;
    width: 200px;
    height: 100%;
	text-align: center;
	display: flex;
	align-items: center;
	justify-content: center;
}

div#profile-edit {
	margin-top: 30px;
	height: 10%;
	width: 100%;
}

div#profile-edit-button {
	margin-left: 30px;
	cursor: pointer;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 20px;
	font-weight: 500;
	width: 70px;
	height: 32px;
	border-radius: 10px;
	background-color: #31363F;
	color: rgb(244, 244, 244);
	box-shadow: 0 0 0 rgba(0, 0, 0, 0); /* 기본 상태에서 그림자 없음 */
    transition: box-shadow 0.3s ease, transform 0.3s ease;
}

div#profile-edit-button:hover {
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); /* 호버 시 더 깊은 그림자 */
    transform: translateY(-2px); /* 살짝 위로 이동 */
}


div#userInfo {
	width: 80%;
	height: 70%;
	margin-top: 20px;
	background-color: rgba(137, 137, 141, 0.1);
	border-radius: 20px;
	display: flex;
	flex-direction: column;
	align-items: center;
}


div#profileUserName {
	width: 100%;
	height: 10%;
	display: flex;
	justify-content: center;
	align-items: center;
}

span#profileNick{
	font-size: 2.5rem;
	font-weight: 700;
	color:#31363F;
}

div#profileImgBox {
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

img#profileImg {
	border-radius: 20px;
	width: 70%;
	height: 80%;
}

div#match {
	margin-top: 70px;
	margin-left: 30px;
	width: 85%;
	height: 80%;
	background-color: rgba(137, 137, 141, 0.1);
	border-radius: 20px;
	display: flex;
	flex-direction: column;
	align-items: center;
}

div#matchInfo {
	margin-top: 15px;
	border-radius: 10px;
	width: 95%;
	height: 21%;
	min-height: 115px;
	background-color: white;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

#winRateCircle {
	margin-left: 30px;
	font-family: Arial, sans-serif;
	position: relative;
	width: 100px;
	height: 100px;
}

canvas.winRateCircle {
	position: absolute;
	width: 100px;
	height: 100px;
}

#percentage {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	font-size: 18px;
	font-weight: 700;
	color: #31363F;
}

span#win {
	color: #4074e0;
	font-size: 30px;
	font-weight: 700;
	margin-left: 30px;
}

span#lose {
	color: #e74c3c;
	font-size: 30px;
	font-weight: 700;
	margin-left: 5px;
}

span#winNum {
	color: #31363F;
	font-size: 30px;
	font-weight: 700;
	margin-right: 10px;
}

span#loseNum {
	color: #31363F;
	font-size: 30px;
	font-weight: 700;
	margin-right: 5px;
}

span#rate {
	color: #31363F;
	font-size: 30px;
	margin-left: 10px;
	margin-right: 30px;
}

div#matchHistory {
	margin-top: 1%;
	width: 95%;
	height: 80%;
	display: flex;
	justify-content: center;
	overflow: hidden;
}

ul#matches {
	width: 100%;
	height: 98%; /* 높이를 고정하지 않고 부모 요소의 높이에 맞추기 위해 100%로 설정 */
	list-style-type: none;
	padding-left: 1%;
	padding-right: 0;
	margin-top: 0;
	margin-bottom: 0;
	overflow-y: auto; /* 수직 스크롤 활성화 */
	border-radius: 20px;
}

li.matchComponent {
	border-radius: 10px;
	width: 100%;
	height: 120px;
	margin-top: 10px;
	margin-bottom: 10px;
	display: flex;
	align-items: center;
}

li#winType {
	background-color: #D0E7FF;
	position: relative;
}

li#winType::before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 10px;
    background-color: #4A90E2; /* 진한 파란색 */
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

li#loseType {
	background-color: #FFD6D6;
	position: relative; /* ::before 사용을 위한 상대적 위치 설정 */
}

li#loseType::before {
	content: '';
	position: absolute;
	left: 0;
	top: 0;
	bottom: 0;
	width: 10px;
	background-color: #E57373; /* 진한 빨간색 */
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
}


div#matchTime {
	min-width: 150px;
	width: 20%;
	height: 80%;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

span#date {
	margin-bottom: 5px;
	width: 60%;
	height: 10%;
	font-weight: 700;
}

div#startTime {
	width: 60%;
	height: 40%;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: flex-end;
	padding-bottom: 5px;
	font-size: 18px;
	color:#31363F;
	font-weight: 700;
	border-bottom: 0.5px solid #31363F;
}

div#playTime {
	width: 100%;
	height: 40%;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: flex-start;
	color:#656262;
	padding-top: 5px;
	font-weight: 700;
}

div#opImg {
	width: 20%;
	height: 80%;
	display: flex;
	align-items: center;
	justify-content: center;
}


img#opImg {
	border-radius: 10px;
	width: 80%;
	height: 100%;
}


div#matchOp {
	padding-left: 5%;
	width: 20%;
	height: 80%;
	display: flex;
	align-items: center;
	justify-content: flex-start;
}

span#vs{
	font-size: 30px;
	font-weight: 800;
	margin-right: 20px;
}

span#opNick{
	font-size: 20px;
	font-weight: 700;
}
/* ... */

